Add a link to the API reference

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ through Crates.io:</p>
 
 <p>Otherwise, clone <a href="https://github.com/ebassi/taglib-rust">the Git repository</a>, and run <a href="http://crates.io/">cargo</a>:</p>
 
-<pre><code>$ cargo build
+<pre><code>    $ cargo build
 </code></pre>
 
 <h3>
@@ -83,6 +83,11 @@ through Crates.io:</p>
 
 <p>TagLib-Rust comes with some examples on how to use it, see the <code>examples</code>
 directory in the <a href="https://github.com/ebassi/taglib-rust">the Git repository</a>.</p>
+
+<h3>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h3>
+
+<p>The API reference for TagLib-Rust is available <a href="http://ebassi.github.io/taglib-rust/docs/taglib/">online</a>.</p>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
