--- a/index.html
+++ b/index.html
@@ -92,16 +92,7 @@ directory in the <a href="https://github.com/ebassi/taglib-rust">the Git reposit
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>TagLib-Rust is licensed under the terms of the Lesser General Public
-License version 2.1, or, at your option under the terms of the Mozilla
-Public License version 1.1.</p>
-
-<ul>
-<li>LGPL v2.1: <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>
-</li>
-<li>MPL 1.1: <a href="https://www.mozilla.org/MPL/1.1/index.txt">https://www.mozilla.org/MPL/1.1/index.txt</a>
-</li>
-</ul>
+<p>TagLib-Rust is licensed under the terms of the <a href="https://opensource.org/licenses/MIT">MIT/X11 license</a>.</p> 
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ebassi/taglib-rust">Taglib-rust</a> is maintained by <a href="https://github.com/ebassi">ebassi</a>.</span>
